--- a/Bootstrap/Project-1/Home.html
+++ b/Bootstrap/Project-1/Home.html
@@ -20,10 +20,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="#">Employee</a>
+                <a class="nav-link " aria-current="page" href="./Employee.html">Employee</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Jobs</a>
+                <a class="nav-link" href="./Jobs.html">Jobs</a>
               </li>
               
             </ul>
@@ -43,7 +43,7 @@
                 <h4 class="card-title"> 250 <small class="text-muted">Employee</small></h4>
                 </div>
                 <div class="list-group list-group-flush">
-                  <a href="#" class="list-group-item list-group-item-primary">View All</a>
+                  <a href="./Employee.html" class="list-group-item list-group-item-primary">View All</a>
                  </div>
             </div>
           </div>
@@ -53,7 +53,7 @@
                 <h4 class="card-title"> 90 <small class="text-muted">Jobs</small></h4>
                 </div>
                 <div class="list-group list-group-flush">
-                  <a href="#" class="list-group-item list-group-item-primary">View All</a>
+                  <a href="./Jobs.html" class="list-group-item list-group-item-primary">View All</a>
                  </div>
             </div>
           </div>
