--- a/Bootstrap/Project-1/Home.html
+++ b/Bootstrap/Project-1/Home.html
@@ -28,9 +28,10 @@
               
             </ul>
             <form class="d-flex">
-              <input class="form-control me-2 form-control-sm" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success btn-sm" type="submit">Search</button>
+              <input class="form-control  form-control-sm" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success btn-sm btn-success text-white" type="submit">Search</button>
             </form>
+            <a href="#" class=" ms-3 btn btn-sm btn-primary">Log Out</a>
           </div>
         </div>
       </nav>
