--- a/Bootstrap/Project-1/Employee.html
+++ b/Bootstrap/Project-1/Employee.html
@@ -23,7 +23,7 @@
                 <a class="nav-link " aria-current="page" href="./Employee.html">Employee</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Jobs</a>
+                <a class="nav-link" href="./Jobs.html">Jobs</a>
               </li>
               
             </ul>
@@ -31,6 +31,7 @@
               <input class="form-control form-control-sm" type="search" placeholder="Search..." aria-label="Search">
               <button class="btn btn-outline-success btn-sm btn-success text-white" type="submit">Search</button>
             </form>
+            <a href="#" class=" ms-3 btn btn-sm btn-primary">Log Out</a>
           </div>
         </div>
       </nav>
